<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="workprogressVM" type="com.eamtrackerapp.app.modules.workprogress.data.viewmodel.WorkprogressVM"/>
    </data>
    <FrameLayout android:id="@+id/frameWorkProgress"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumnworkinprogres"
            android:layout_gravity="top|start"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar android:gravity="start"
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowworkinprogres"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal" style="@style/groupStyleyellow_800">
                    <ImageView android:id="@+id/imageImageEight"
                        android:layout_height="@dimen/_64pxh"
                        android:layout_marginBottom="@dimen/_4pxv"
                        android:layout_marginStart="@dimen/_11pxh"
                        android:layout_marginTop="@dimen/_3pxv"
                        android:layout_width="@dimen/_64pxh"
                        android:scaleType="fitXY"
                        imageRes="@{@drawable/img_image8}"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_image8"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtWorkinProgres"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_19pxv"
                        android:layout_marginEnd="@dimen/_90pxh"
                        android:layout_marginStart="@dimen/_20pxh"
                        android:layout_marginTop="@dimen/_18pxv"
                        android:layout_weight="0.73"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{workprogressVM.workprogressModel.txtWorkinProgres}"
                        style="@style/txtHandleeregular24" tools:text="@string/msg_work_in_progres"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowtasklist"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_18pxh"
                android:layout_marginStart="@dimen/_18pxh"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageImageTen"
                    android:layout_height="@dimen/_51pxh"
                    android:layout_width="@dimen/_50pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_image10}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_image10"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTaskList"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_weight="0.67"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{workprogressVM.workprogressModel.txtTaskList}"
                    style="@style/txtHandleeregular28" tools:text="@string/lbl_task_list"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtAddEmployeeId"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_17pxh"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_marginTop="@dimen/_46pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{workprogressVM.workprogressModel.txtAddEmployeeId}"
                style="@style/txtHandleeregular24" tools:text="@string/msg_add_employee_id"/>
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/lbl_employee_id"
                android:id="@+id/textInputLayRectangleNine"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_11pxh"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_width="match_parent"
                android:textColorHint="@color/black_900" style="@style/txtSolidRoundedOutline_2">
                <com.google.android.material.textfield.TextInputEditText
                    android:ellipsize="end"
                    android:id="@+id/etRectangleNine"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@={workprogressVM.workprogressModel.etRectangleNineValue}"
                    android:textColor="@color/black_900" android:textSize="@dimen/_8pxh"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLanguage"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_18pxh"
                android:layout_marginStart="@dimen/_18pxh"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{workprogressVM.workprogressModel.txtLanguage}"
                style="@style/txtHandleeregular24" tools:text="@string/msg_add_task_title"/>
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/lbl_task_name"
                android:id="@+id/textInputLayRectangleTen"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_11pxh"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="match_parent"
                android:textColorHint="@color/black_900" style="@style/txtSolidRoundedOutline_2">
                <com.google.android.material.textfield.TextInputEditText
                    android:ellipsize="end"
                    android:id="@+id/etRectangleTen"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@={workprogressVM.workprogressModel.etRectangleTenValue}"
                    android:textColor="@color/black_900" android:textSize="@dimen/_8pxh"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtAddTaskDetail"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_26pxh"
                android:layout_marginStart="@dimen/_26pxh"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{workprogressVM.workprogressModel.txtAddTaskDetail}"
                style="@style/txtHandleeregular24" tools:text="@string/msg_add_task_detail"/>
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/lbl_task_detail"
                android:id="@+id/textInputLayRectangleEleven"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_11pxh"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="match_parent"
                android:textColorHint="@color/black_900" style="@style/txtSolidRoundedOutline_2">
                <com.google.android.material.textfield.TextInputEditText
                    android:ellipsize="end"
                    android:id="@+id/etRectangleEleven"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@={workprogressVM.workprogressModel.etRectangleElevenValue}"
                    android:textColor="@color/black_900" android:textSize="@dimen/_8pxh"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLanguageOne"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_26pxh"
                android:layout_marginStart="@dimen/_26pxh"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{workprogressVM.workprogressModel.txtLanguageOne}"
                style="@style/txtHandleeregular24" tools:text="@string/lbl_add_due_date"/>
            <FrameLayout android:id="@+id/frameStackrectangletwelve"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_64pxv"
                android:layout_marginEnd="@dimen/_11pxh"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_marginTop="@dimen/_4pxv" android:layout_width="@dimen/_333pxh">
                <View
                    android:background="@drawable/rectangle_bg_white_a700_border_black_900_radius_20"
                    android:id="@+id/viewRectangleTwelve"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_60pxv"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginTop="@dimen/_2pxv" android:layout_width="@dimen/_333pxh"/>
                <ImageView android:id="@+id/imageImageTwelve"
                    android:layout_gravity="end"
                    android:layout_height="@dimen/_64pxh"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_width="@dimen/_64pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_image12}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_image12"/>
            </FrameLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtGroupThree"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_11pxh"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_marginTop="@dimen/_32pxv"
                android:layout_width="wrap_content"
                android:paddingBottom="@dimen/_2pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_10pxv"
                android:singleLine="true"
                android:text="@{workprogressVM.workprogressModel.txtGroupThree}"
                style="@style/txtSolidRounded_1" tools:text="@string/lbl_submit"/>
        </LinearLayout>
    </FrameLayout>
</layout>
