<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="forgotpasswordVM" type="com.eamtrackerapp.app.modules.forgotpassword.data.viewmodel.ForgotpasswordVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearForgotPassword"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowresetpassword"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStyleyellow_800">
                <ImageView android:id="@+id/imageImageEight"
                    android:layout_height="@dimen/_64pxh"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_width="@dimen/_64pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_image8}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_image8"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtResetPassword"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_22pxv"
                    android:layout_marginEnd="@dimen/_105pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_15pxv"
                    android:layout_weight="0.71"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{forgotpasswordVM.forgotpasswordModel.txtResetPassword}"
                    style="@style/txtHandleeregular24" tools:text="@string/lbl_reset_password"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnCurrentPasswordOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginTop="@dimen/_94pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@string/msg_current_passwor"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline" tools:text="@string/msg_current_passwor"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnNewPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@string/lbl_new_password"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_new_password"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnConfirmPasswordOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_11pxh"
            android:layout_marginStart="@dimen/_9pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@string/msg_confirm_passwor"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline" tools:text="@string/msg_confirm_passwor"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtGroupFourteen"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_75pxh"
            android:layout_marginStart="@dimen/_75pxh"
            android:layout_marginTop="@dimen/_52pxv"
            android:layout_width="wrap_content"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingEnd="@dimen/_4pxh"
            android:paddingStart="@dimen/_4pxh"
            android:paddingTop="@dimen/_10pxv" android:singleLine="true"
            android:text="@{forgotpasswordVM.forgotpasswordModel.txtGroupFourteen}"
            style="@style/txtSolidRounded" tools:text="@string/lbl_update_password"/>
    </LinearLayout>
</layout>
