<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registerVM" type="com.eamtrackerapp.app.modules.register.data.viewmodel.RegisterVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearRegister"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowregister"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStyleyellow_800">
                <ImageView android:id="@+id/imageImageEight"
                    android:layout_height="@dimen/_64pxh"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_width="@dimen/_64pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_image8}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_image8"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtRegister"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_19pxv"
                    android:layout_marginEnd="@dimen/_181pxh"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_18pxv"
                    android:layout_weight="0.57"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{registerVM.registerModel.txtRegister}"
                    style="@style/txtHandleeregular24" tools:text="@string/lbl_register"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/lbl_username"
            android:id="@+id/textInputLayName"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_86pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_13pxv"
            android:textColorHint="@color/black_900" style="@style/txtSolidRoundedOutline">
            <com.google.android.material.textfield.TextInputEditText
                android:ellipsize="end"
                android:fontFamily="@font/handlee"
                android:id="@+id/etName" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@={registerVM.registerModel.etNameValue}"
                android:textColor="@color/gray_700_68"
                android:textFontWeight="400"
                android:textSize="@dimen/_24pxh" android:textStyle="normal"/>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnEmailId"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@string/lbl_email_id"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_email_id"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnPhoneNo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@string/lbl_phone_no"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_phone_no"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_13pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@string/lbl_password"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_password"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnRegisterOne"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_80pxh"
            android:layout_marginStart="@dimen/_80pxh"
            android:layout_marginTop="@dimen/_56pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_11pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_11pxv" android:singleLine="true"
            android:text="@string/lbl_register"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_register"/>
    </LinearLayout>
</layout>
